# python-dmi-open-data

./: .gitignore  .readthedocs.yaml  README.md  flake.nix  generate-sdk  mkdocs.yml  pyproject.toml
docs/: index.md
docs/climatedata/: CapabilitiesApi.md  ClimateData10kmGridValuesApi.md  ClimateData20kmGridValuesApi.md  ClimateDataCountryValuesApi.md  ClimateDataMunicipalityValuesApi.md  ClimateDataStationValuesApi.md  ClimateStationsStationDataApi.md  Collection.md  Collections.md  Conformance.md  Extent.md  Feature.md  FeatureCollection.md  Geometry.md  LandingPage.md  Link.md  Spatial.md  Temporal.md
docs/forecastdata/: CapabilitiesApi.md  Collection.md  Collections.md  Conformance.md  DKSSForecastDataGRIBFilesApi.md  DownloadForecastFilesApi.md  Extent.md  Feature.md  FeatureCollection.md  Geometry.md  HARMONIEForecastDataGRIBFilesApi.md  LandingPage.md  Link.md  Spatial.md  Temporal.md  WAMForecastDataGRIBFilesApi.md
docs/lightningdata/: CapabilitiesApi.md  Collection.md  Collections.md  Conformance.md  Extent.md  Feature.md  FeatureCollection.md  Geometry.md  LandingPage.md  LightningObservationApi.md  LightningSensordataApi.md  LightningStationApi.md  Link.md  Spatial.md  Temporal.md
docs/metobs/: CapabilitiesApi.md  Collection.md  Collections.md  Conformance.md  Extent.md  Feature.md  FeatureCollection.md  Geometry.md  LandingPage.md  Link.md  MetObservationApi.md  MetStationApi.md  Spatial.md  Temporal.md
docs/oceanobs/: CapabilitiesApi.md  Collection.md  Collections.md  Conformance.md  Extent.md  Feature.md  FeatureCollection.md  Geometry.md  LandingPage.md  Link.md  OceanObservationApi.md  OceanStationApi.md  Spatial.md  Temporal.md  TidewaterApi.md
docs/radardata/: CapabilitiesApi.md  Collection.md  Collections.md  Conformance.md  DownloadRadarFilesApi.md  Extent.md  Feature.md  FeatureCollection.md  Geometry.md  LandingPage.md  Link.md  RadarDataCompositeFilesApi.md  RadarDataPseudoCAPPIFilesApi.md  RadarDataVolumeFilesApi.md  Spatial.md  Temporal.md
src/dmi_open_data/: __init__.py
src/dmi_open_data/climatedata/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
src/dmi_open_data/metobs/: rest.py  (+4 more)
(+126 files in other folders)
